<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="org.rafisa.richtungsanzeiger.activities.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/showDirectionAction"
            app:destination="@id/SecondFragment" >
        <argument
            android:name="directionValue"
            app:argType="integer"
            android:defaultValue="40" /></action>

        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/to_map_fragment"
            app:destination="@id/mapView" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="org.rafisa.richtungsanzeiger.activities.ShowDirectionFragment"
        android:label="@string/show_direction_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="org.rafisa.richtungsanzeiger.activities.EditLocationFragment"
        android:label="@string/edit_location_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapView"
        android:name="org.rafisa.richtungsanzeiger.activities.SearchOnMapFragment"
        android:label="@string/search_on_map_fragment_label"
        tools:layout="@layout/fragment_search_on_map">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>