<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_first"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/showDirectionButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@android:color/background_light"
            android:contentDescription="@string/compass"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_compass" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundTint="@color/black"
                android:text="@string/hello_first_fragment"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/editLocationButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@android:color/background_light"
            android:contentDescription="@string/editLocation"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_edit" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
